--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -31,12 +31,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.115.2
+      HUGO_VERSION: 0.120.3
     steps:
-      - name: Install Hugo CLI
+      - name: Install Hugo Extended
         run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+          wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.tar.gz
+          tar -zxvf hugo_${HUGO_VERSION}_Linux-64bit.tar.gz
+          sudo mv hugo /usr/local/bin/hugo
+          hugo version
       - name: Install Dart Sass
         run: sudo snap install dart-sass
       - name: Checkout
