--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,15 +1,15 @@
 ### SEO, Analytics & 3rd-party
-netlify_forms = true # add data-netlify attribute to contact and newsletter forms, false to disable Netlify forms
+netlify_forms = false # add data-netlify attribute to contact and newsletter forms, false to disable Netlify forms
 # gtm_id = '' # GTM tracking (leave blank to use GA)
 disallow_search_engines = false # Disallow search engine crawling in robots.txt
 
 ### Content
 favicon = true # Enable favicon, add your favicon files to /static/ directory
-# avatar = 'avatar.png' # Custom avatar image in /assets/
+avatar = 'portrait.png' # Custom avatar image in /assets/
 grayscale_avatar = true # Add a grayscale filter to the avatar image
-author = 'John Doe' # Default author for <head> meta
-description = "Personal blog and portfolio site of John Doe." # Add a global meta description to <head>
-footer_text = "Built with [Hugo Liftoff](https://github.com/wjh18/hugo-liftoff) theme." # Customize footer text
+author = 'Luke Hewitt' # Default author for <head> meta
+description = "personal blog and portfolio site of luke hewitt." # Add a global meta description to <head>
+#footer_text = "Built with [Hugo Liftoff](https://github.com/wjh18/hugo-liftoff) theme." # Customize footer text
 fallback_text = "No content available yet. Coming soon." # Fallback text for empty content
 label_drafts = true # Add a label indicator next to the title of any built drafts (dev only)
 
@@ -17,7 +17,7 @@ label_drafts = true # Add a label indicator next to the title of any built draft
 newsletter_header = "This is my custom newsletter header with a captivating title."
 newsletter_description = "This is my custom newsletter description that tells you why you should sign up."
 newsletter_submit = "Join now"
-global_newsletter = true # Enable newsletter site-wide
+global_newsletter = false # Enable newsletter site-wide
 
 # CSS / JavaScript
 enable_postcss = false # Enable if you're using npm and want to utilize PostCSS processing
@@ -48,10 +48,10 @@ about_page_socials = true
 
 # Enable or disable individual social icons
 [social.links]
-  twitter = "username"
-  github = "username"
-  stack_overflow = "userid/username" # include user id
-  email = "user@example.com"
+  #twitter = "username"
+  github = "unclelukie"
+  #stack_overflow = "userid/username" # include user id
+  email = "lsjhewitt@gmail.com"
   # linkedin = "username" # Comment out to disable
   # mastodon_server = "example.social" # include subdomains if relevant, scheme not needed (defaults to https)
   # mastodon_user = "username" # don't include preceding @
