--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
 [submodule "themes/hugo-liftoff"]
 	path = themes/hugo-liftoff
-	url = https://github.com/wjh18/hugo-liftoff.git
+	url = https://github.com/uncleLukie/hugo-liftoff.git
