--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/dat.gui": "^0.7.13",
+    "dat.gui": "^0.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.169.0",
